--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
     "cSpell.words": [
         "asgi",
         "fullmigrate",
+        "gapi",
         "helvetica",
         "neue",
         "noprint",
