--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,8 @@
     ],
     "cSpell.words": [
         "asgi",
+        "csrf",
+        "csrftoken",
         "fullmigrate",
         "gapi",
         "helvetica",
@@ -20,6 +22,7 @@
         "pylint",
         "pytest",
         "safemigrate",
+        "token",
         "ttfonts",
         "uvicorn"
     ],
