--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
         "--experimental"
     ],
     "python.linting.pylintArgs": [
+        "--load-plugins",
+        "pylint_django",
         "--max-line-length",
         "120"
     ],
