How wasn't Reportlab in the Pipfile?

--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ django-bootstrap4 = "*"
 google-auth = "*"
 requests = "*"
 django-health-check = "*"
+reportlab = "*"
 
 [dev-packages]
 autopep8 = "*"
