--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,8 @@ django-health-check = "*"
 reportlab = "*"
 django-bootstrap-breadcrumbs = "*"
 sorl-thumbnail = "*"
+redis = "*"
+django-redis = "*"
 
 [dev-packages]
 autopep8 = "*"
