Bring in rest framework

--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,9 @@ django-bootstrap-breadcrumbs = "*"
 sorl-thumbnail = "*"
 redis = "*"
 django-redis = "*"
+djangorestframework = "*"
+markdown = "*"
+django-filter = "*"
 
 [dev-packages]
 autopep8 = "*"
