--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,11 +19,16 @@
         "fullmigrate",
         "gapi",
         "helvetica",
+        "kvstore",
+        "kvstores",
         "neue",
         "noprint",
+        "nostatic",
         "pylint",
         "pytest",
         "safemigrate",
+        "sorl",
+        "thumbnail",
         "token",
         "ttfonts",
         "uvicorn"
