--- a/Pipfile
+++ b/Pipfile
@@ -26,6 +26,7 @@ djangorestframework = "*"
 markdown = "*"
 django-filter = "*"
 django-storages = "*"
+boto3 = "*"
 
 [dev-packages]
 autopep8 = "*"
