Switch to versatile image field

--- a/Pipfile
+++ b/Pipfile
@@ -19,14 +19,12 @@ requests = "*"
 django-health-check = "*"
 reportlab = "*"
 django-bootstrap-breadcrumbs = "*"
-sorl-thumbnail = "*"
-redis = "*"
-django-redis = "*"
 djangorestframework = "*"
 markdown = "*"
 django-filter = "*"
 django-storages = "*"
 boto3 = "*"
+django-versatileimagefield = "*"
 
 [dev-packages]
 autopep8 = "*"
