--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "pytest",
         "safemigrate",
         "sorl",
+        "sortid",
         "thumbnail",
         "token",
         "ttfonts",
