Bring in requests futures

--- a/Pipfile
+++ b/Pipfile
@@ -26,6 +26,7 @@ django-storages = "*"
 boto3 = "*"
 django-versatileimagefield = "*"
 django-solo = "*"
+requests-futures = "*"
 
 [dev-packages]
 autopep8 = "*"
