Student information system (#45)
* Dependency updates

* Scaffold SIS app

* View only admin

* Preliminary SIS models

* Add the SIS config

* Remove unused fields

* SIS work

Preliminary admin
Model changes
Migrations

* SIS integration updates

Updated models
Added APIs

* Typo fix

* OpenAPI schema generation

* Lint

* Start of sync scripts

* Raise the page size

* Bring in requests futures

* Somewhat working student sync

* Flip around conditions

* Clean up data sync

* Allow page size changes

* Don't sync in parallel

* Updated manager

Fix problems in run once across classes
Support field translations

* Update teacher admin

* Sync teachers

* Added course sync

* Remove sync

* SIS model updates

* Updates for sync

* SIS updates

* SIS work for detentions

* Detention admin

* Reset migrations

* Remove unused launch config

* Remove unused dependency

* Remove old scripts

* Create the SIS syncer group

--- a/Pipfile
+++ b/Pipfile
@@ -25,6 +25,7 @@ django-filter = "*"
 django-storages = "*"
 boto3 = "*"
 django-versatileimagefield = "*"
+django-solo = "*"
 
 [dev-packages]
 autopep8 = "*"
@@ -35,6 +36,8 @@ pytest-django = "*"
 django-debug-toolbar = "*"
 ipython = "*"
 pylint-django = "*"
+pyyaml = "*"
+uritemplate = "*"
 
 [requires]
 python_version = "3.9"
