--- a/Pipfile
+++ b/Pipfile
@@ -27,6 +27,7 @@ boto3 = "*"
 django-versatileimagefield = "*"
 django-solo = "*"
 logzio-python-handler = "*"
+django-ipware = "*"
 
 [dev-packages]
 autopep8 = "*"
