Remove the annoying default_app_config warning

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,6 @@
 DJANGO_SETTINGS_MODULE = core.settings
 
 python_files = tests.py test_*.py *_tests.py
+
+filterwarnings =
+    ignore:.*Django now detects this configuration.*
