--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "nostatic",
         "pylint",
         "pytest",
+        "reportlab",
         "safemigrate",
         "sorl",
         "sortid",
