Re-vamp nav with a a builder and user hover

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ django-ipware = "*"
 django-anymail = {extras = ["mailgun"], version = "*"}
 django-lb-health-check = "^1.0"
 django-quick-jobs = "^0.2.0"
+htmlBuilder = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "*"
