--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,8 +17,10 @@
         "asgi",
         "csrf",
         "csrftoken",
+        "firstweekday",
         "fullmigrate",
         "gapi",
+        "HEADERMAPPING",
         "helvetica",
         "kvstore",
         "kvstores",
