Updated login system (#69)
* Use the updated Google Auth

* Add strict origin when cross to fix Google login

* Global google signin

* Somewhat fully working google flow

* Remove social login context

* Auto sign in

* Update auto select

* Don't prompt for auto login on login

* Fix unauthorized messages

* Strip away a bunch of unneeded boilerplate

* Re-vamp nav with a a builder and user hover

* Clean up typing

* Clean up auto login

* Remove extra JS

* Clean up HTML

* Remove jQuery

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ django-bootstrap-breadcrumbs = "*"
 django-anymail = {extras = ["mailgun"], version = "*"}
 django-lb-health-check = "^1.0"
 django-quick-jobs = "^0.2.0"
+htmlBuilder = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "*"
