--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ django-anymail = {extras = ["mailgun"], version = "*"}
 django-lb-health-check = "^1.0"
 django-quick-jobs = "^0.2.0"
 htmlBuilder = "^1.0.0"
+structlog = "^21.5.0"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "*"
