--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,7 @@
         "safemigrate",
         "sorl",
         "sortid",
+        "structlog",
         "thumbnail",
         "token",
         "ttfonts",
