--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,15 @@
                 "runserver"
             ],
             "django": true
+        },
+        {
+            "name": "Run jobs",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/manage.py",
+            "args": [
+                "run_jobs"
+            ]
         }
     ]
 }
