--- a/.github/workflows/hanging-migrations.yml
+++ b/.github/workflows/hanging-migrations.yml
@@ -21,7 +21,7 @@ jobs:
       
       - name: Set up dependencies
         run: python -m poetry install
-      - name: Run tests
-        run: pytest
+      - name: Check for hanging migrations
+        run: python manage.py makemigrations --dryrun --check
   
   
