--- a/.github/workflows/hanging-migrations.yml
+++ b/.github/workflows/hanging-migrations.yml
@@ -22,6 +22,6 @@ jobs:
       - name: Set up dependencies
         run: python -m poetry install
       - name: Check for hanging migrations
-        run: python manage.py makemigrations --dryrun --check
+        run: python manage.py makemigrations --dry-run --check
   
   
