--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,7 @@
 {
     "python.linting.enabled": true,
     "editor.formatOnSave": true,
-    "python.formatting.autopep8Args": [
-        "--max-line-length",
-        "120",
-        "--experimental"
-    ],
-    "python.linting.pylintArgs": [
-        "--load-plugins=pylint_django",
-        "--django-settings-module=core.settings",
-        "--max-line-length",
-        "120"
-    ],
+    "python.formatting.provider": "black",
     "cSpell.words": [
         "adminsortable",
         "ANYMAIL",
@@ -44,13 +34,10 @@
         "uvicorn",
         "whitenoise"
     ],
-    "python.testing.pytestArgs": [
-        "."
-    ],
     "python.testing.unittestEnabled": false,
     "python.testing.nosetestsEnabled": false,
     "python.testing.pytestEnabled": true,
-    "python.linting.pylintEnabled": true,
+    "python.linting.pylintEnabled": false,
     "files.associations": {
         "**/*.html": "html",
         "**/templates/**/*.html": "django-html",
@@ -60,4 +47,5 @@
     "emmet.includeLanguages": {
         "django-html": "html"
     },
+    "python.linting.mypyEnabled": true,
 }
