--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,8 @@ pylint-django = "*"
 pyyaml = "*"
 uritemplate = "*"
 mypy = "^0.950"
+black = "^22.3.0"
+django-stubs = "^1.11.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
