--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,3 +43,9 @@ django-stubs = "^1.11.0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.mypy]
+plugins = ["mypy_django_plugin.main"]
+
+[tool.django-stubs]
+django_settings_module = "core.settings"
