--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ django-lb-health-check = "^1.0"
 django-quick-jobs = "^0.2.0"
 htmlBuilder = "^1.0.0"
 structlog = "^21.5.0"
+django-stubs-ext = "^0.4.0"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "*"
