--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ django-lb-health-check = "^1.0"
 django-quick-jobs = "^0.2.0"
 htmlBuilder = "^1.0.0"
 structlog = "^21.5.0"
+django-stubs-ext = "^0.4.0"
 
 [tool.poetry.dev-dependencies]
 autopep8 = "*"
@@ -37,7 +38,15 @@ pylint-django = "*"
 pyyaml = "*"
 uritemplate = "*"
 mypy = "^0.950"
+black = "^22.3.0"
+django-stubs = "^1.11.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.mypy]
+plugins = ["mypy_django_plugin.main"]
+
+[tool.django-stubs]
+django_settings_module = "core.settings"
