--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,9 @@
         "adminsortable",
         "ANYMAIL",
         "asgi",
+        "autopep",
+        "Blackbaud",
+        "Callsite",
         "csrf",
         "csrftoken",
         "dotenv",
@@ -18,19 +21,25 @@
         "kvstores",
         "locmemcache",
         "MAILGUN",
+        "naturaldelta",
         "neue",
         "noprint",
         "nostatic",
+        "oneroster",
         "pylint",
         "pytest",
+        "pyyaml",
         "reportlab",
+        "rostr",
         "safemigrate",
         "sorl",
         "sortid",
         "structlog",
+        "syncconfig",
         "thumbnail",
         "token",
         "ttfonts",
+        "uritemplate",
         "uvicorn",
         "whitenoise"
     ],
