--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ django-solo = "^2.0.0"
 types-requests = "^2.28.10"
 django-structlog = "^3.0.1"
 humanize = "^4.3.0"
+django-simple-history = "^3.1.1"
 
 [tool.poetry.dev-dependencies]
 rope = "*"
