Preliminary enrichment system
- Creation of the app
- Models
- Calculators
- Admin
- Save advisee for advisor view

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,7 @@
         "rostr",
         "safemigrate",
         "signout",
+        "signups",
         "sorl",
         "sortid",
         "structlog",
