--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,9 @@ types-requests = "^2.28.10"
 django-structlog = "^3.0.1"
 humanize = "^4.3.0"
 django-simple-history = "^3.1.1"
+pydantic = "^1.10.2"
+django-hijack = "^3.2.1"
+fontawesomefree = "^6.2.0"
 
 [tool.poetry.dev-dependencies]
 rope = "*"
