--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,10 +13,12 @@
         "csrftoken",
         "dotenv",
         "firstweekday",
+        "frozendict",
         "fullmigrate",
         "gapi",
         "HEADERMAPPING",
         "helvetica",
+        "jsonable",
         "kvstore",
         "kvstores",
         "locmemcache",
