--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,9 @@ mypy = "^0.950"
 black = "^22.3.0"
 django-stubs = "^1.11.0"
 
+[tool.poetry.group.dev.dependencies]
+rope = "^1.3.0"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
