Use Node assets
- Add Yarn configs for Select2
- Remove vendored Select2
- Add config for Django node modules static finder
- Update Dockerfile to do Yarn installs
- Update Dockerfile to remove node modules after collect static

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ pydantic = "^1.10.2"
 django-hijack = "^3.2.1"
 fontawesomefree = "^6.2.0"
 frozendict = "^2.3.4"
+django-node-assets = "^0.9.11"
 
 [tool.poetry.dev-dependencies]
 rope = "*"
