Email config: Full signup list

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -40,6 +40,15 @@
             "args": [
                 "show_permissions"
             ]
+        },
+        {
+            "name": "Make sample enrichment emails",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/manage.py",
+            "args": [
+                "make_sample_emails"
+            ]
         }
     ]
 }
