--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ frozendict = "^2.3.4"
 django-node-assets = "^0.9.11"
 premailer = "^3.10.0"
 django-braces = "^1.15.0"
+openpyxl = "^3.1.1"
 
 [tool.poetry.group.dev.dependencies]
 rope = "*"
