--- a/.github/workflows/hanging-migrations.yml
+++ b/.github/workflows/hanging-migrations.yml
@@ -3,25 +3,23 @@ on:
   - pull_request
 
 jobs:
-  test:
+  black:
     runs-on: ubuntu-latest
-    env:
-      POETRY_VIRTUALENVS_CREATE: false
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: "3.10"
-      - name: Install poetry
+      - name: Install pdm
         run: |
           python -m ensurepip
           python -m pip install --upgrade pip
-          python -m pip install poetry==1.2.2
+          python -m pip install pdm
       
       - name: Set up dependencies
-        run: python -m poetry install
+        run: pdm install -d
       - name: Check for hanging migrations
-        run: python manage.py makemigrations --dry-run --check
+        run: pdm run python manage.py makemigrations --dry-run --check
   
   
