--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,23 +5,21 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    env:
-      POETRY_VIRTUALENVS_CREATE: false
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v5
         with:
           python-version: "3.10"
-      - name: Install poetry
+      - name: Install pdm
         run: |
           python -m ensurepip
           python -m pip install --upgrade pip
-          python -m pip install poetry==1.2.2
+          python -m pip install pdm
       
       - name: Set up dependencies
-        run: python -m poetry install
+        run: pdm install -d
       - name: Run tests
-        run: pytest
+        run: pdm run pytest
   
   
