--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "rectory-apps",
   "dependencies": {
+    "bootstrap": "~4.6.2",
+    "jquery": "~3.5.1",
+    "popper.js": "~1.16.1",
     "select2": "^4.1.0-rc.0"
   },
   "license": "MIT"
