--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "rectory-apps",
   "dependencies": {
     "bootstrap": "~4.6.2",
+    "fontawesome-free": "^1.0.4",
     "jquery": "~3.5.1",
     "popper.js": "~1.16.1",
     "select2": "^4.1.0-rc.0"
