General system updates
- Django 4.2
- Python 3.12
- Full dependency updates
- Fork Django bootstrap breadcrumbs to work on Django 4.2
- General linting

--- a/.github/workflows/hanging-migrations.yml
+++ b/.github/workflows/hanging-migrations.yml
@@ -3,14 +3,14 @@ on:
   - pull_request
 
 jobs:
-  black:
+  hanging_migrations:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.10"
+          python-version: "3.12"
       - name: Install pdm
         run: |
           python -m ensurepip
