--- a/.github/workflows/hanging-migrations.yml
+++ b/.github/workflows/hanging-migrations.yml
@@ -11,15 +11,11 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
-      - name: Install pdm
-        run: |
-          python -m ensurepip
-          python -m pip install --upgrade pip
-          python -m pip install pdm
-      
-      - name: Set up dependencies
-        run: pdm install -d
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+        with:
+          version: "0.8.14"
       - name: Check for hanging migrations
-        run: pdm run python manage.py makemigrations --dry-run --check
+        run: uv run python manage.py makemigrations --dry-run --check
   
   
