--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,17 +11,13 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
-      - name: Install pdm
-        run: |
-          python -m ensurepip
-          python -m pip install --upgrade pip
-          python -m pip install pdm
-      
-      - name: Set up dependencies
-        run: pdm install -d
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+        with:
+          version: "0.8.14"
       - name: Install frontend dependencies
         run: yarn install
       - name: Run tests
-        run: pdm run pytest
+        run: uv run pytest
   
   
